# w0rk

./: .gitignore  .tool-versions  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
base/: Cargo.toml
base/src/: config.rs  day.rs  lib.rs  recurring_task.rs  task.rs  workspace.rs
sync/: Cargo.toml
sync/src/: lib.rs  slack.rs
test_fixtures/work/: .recurring.md  2010-10-01.md
