[workspace]
resolver = "2"
members = ["base", "bin", "sync"]

[workspace.dependencies]
thiserror = "1.0.61"
anyhow = "1.0.70"
time = { version = "0.3.36", features = ["parsing", "formatting", "serde"] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "^1.0.203", features = ["derive"] }
serde_json = "^1.0.118"
regex = "1.10.5"
lazy_static = "1.5.0"
reqwest = { version = "0.12.5", features = ["json"] }
